fixing submenu overflow

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ html {
     top: 0;
     max-height: 220px;
     background: #232023;
-    z-index: 1;
+    z-index: 99;
     overflow-x: hidden;
 
 }
@@ -168,17 +168,17 @@ html {
 
 .top-section {
     position: relative;
-    height: 500px;
-    overflow: hidden;
+    height: 385px;
     background-color: #ee5522;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='100' y1='33' x2='100' y2='-3'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='100' y1='135' x2='100' y2='97'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%23ca481d' fill-opacity='0.6'%3E%3Crect x='100' width='100' height='100'/%3E%3Crect y='100' width='100' height='100'/%3E%3C/g%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23a)' points='100 30 0 0 200 0'/%3E%3Cpolygon fill='url(%23b)' points='100 100 0 130 0 100 200 100 200 130'/%3E%3C/g%3E%3C/svg%3E");
+    z-index: 1;
 }
 
 .top-section .top-search-container {
     display: flex;
     width: 85%;
-    margin: 5rem auto;
-    justify-content: center;
+    margin-left: auto;
+    padding-top: 6rem;
 
 }
 
@@ -229,6 +229,7 @@ html {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-top: 3.55rem;
 }
 
 .menu li {
